--- a/templates/arena.html
+++ b/templates/arena.html
@@ -7,8 +7,8 @@
 <br/><br/><br/>
 
 <br/><br/><br/>
-<a href="{% url 'fight' %}">FIGHT!!</a>
-<a href="{% url 'home' %}">RUN AWAY!!</a>
+<a href="{% url 'arenafighter:fight' %}">FIGHT!!</a>
+<a href="{% url 'arenafighter:home' %}">RUN AWAY!!</a>
 </center>
 {% endblock %}
 
