--- a/templates/info.html
+++ b/templates/info.html
@@ -21,7 +21,7 @@
 <p></p>
 <br/> <br/>
 
-<a href="{% url 'play_as_character' character.id %}">Play as this Character</a><br/>
-<a href="{% url 'delete' character.id %}">Delete Character</a><br/><br/>
+<a href="{% url 'arenafighter:play_as_character' character.id %}">Play as this Character</a><br/>
+<a href="{% url 'arenafighter:delete' character.id %}">Delete Character</a><br/><br/>
 
 {% endblock %}
