--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,15 @@
                 You are currently logged in as {{ user.username }}
                 <br/>
                 <a href="{% url 'sitehome' %}">HOME |</a>
-                <a href="{% url 'home' %}">ARENAFIGHTER HOME</a>
+                <a href="{% url 'arenafighter:home' %}">ARENAFIGHTER HOME</a>
                 {% if character_id %}
-                    | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
-                    | <a href="{% url 'locations' %}">LOCATIONS</a>
-                    | <a href="{% url 'arena' %}">TO BATTLE!!</a>
-                    | <a href="{% url 'store' %}">STORE</a>
+                    | <a href="{% url 'arenafighter:player_info' character_id %}">CHARACTER INFO</a>
+                    | <a href="{% url 'arenafighter:locations' %}">LOCATIONS</a>
+                    | <a href="{% url 'arenafighter:arena' %}">TO BATTLE!!</a>
+                    | <a href="{% url 'arenafighter:store' %}">STORE</a>
                 {% endif %}
                 {% endwith %}
-                | <a href="{% url 'log_out' %}">LOGOUT</a>
+                | <a href="{% url 'arenafighter:log_out' %}">LOGOUT</a>
             {% endif %}
         <br/>
         </center>
