--- a/templates/partials/inventory_list.html
+++ b/templates/partials/inventory_list.html
@@ -6,11 +6,11 @@
 {% if item.type == "potion" %}
 <tr>
     <td>
-        {% if item in equipped %}**{% endif %}<a href="{% url 'potion_detail' item.id %}">{{ item }}</a><br/>
+        {% if item in equipped %}**{% endif %}<a href="{% url 'arenafighter:potion_detail' item.id %}">{{ item }}</a><br/>
     </td>
         {% if sell %}
     <td>
-        <form action="{% url 'sell_potion' item.id %}" method="post">
+        <form action="{% url 'arenafighter:sell_potion' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -20,7 +20,7 @@
         {% endif %}
     {% if not sell %}
     <td>
-        <form action="{% url 'use_potion' %}" method="post">
+        <form action="{% url 'arenafighter:use_potion' %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="False" name="battle"/>
@@ -35,11 +35,11 @@
 {% if item.type == "weapon" %}
 <tr>
     <td>
-        {% if item in equipped %}**{% endif %}<a href="{% url 'weapon_detail' item.id %}">{{ item }}</a><br/>
+        {% if item in equipped %}**{% endif %}<a href="{% url 'arenafighter:weapon_detail' item.id %}">{{ item }}</a><br/>
     </td>
     {% if not sell %}
     <td>
-        <form action="{% url 'equip_weapon' item.id %}" method="post">
+        <form action="{% url 'arenafighter:equip_weapon' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -47,7 +47,7 @@
         </form>
     </td>
     <td>
-        <form action="{% url 'unequip_weapon' item.id %}" method="post">
+        <form action="{% url 'arenafighter:unequip_weapon' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -57,7 +57,7 @@
     {% endif %}
         {% if sell %}
     <td>
-        <form action="{% url 'sell_weapon' item.id %}" method="post">
+        <form action="{% url 'arenafighter:sell_weapon' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -72,11 +72,11 @@
 {% if item.type == "armor" %}
 <tr>
     <td>
-        {% if item in equipped %}**{% endif %}<a href="{% url 'armor_detail' item.id %}">{{ item }}</a><br/>
+        {% if item in equipped %}**{% endif %}<a href="{% url 'arenafighter:armor_detail' item.id %}">{{ item }}</a><br/>
     </td>
     {% if not sell %}
     <td>
-        <form action="{% url 'equip_armor' item.id %}" method="post">
+        <form action="{% url 'arenafighter:equip_armor' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -84,7 +84,7 @@
         </form>
     </td>
     <td>
-        <form action="{% url 'unequip_armor' item.id %}" method="post">
+        <form action="{% url 'arenafighter:unequip_armor' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
@@ -94,7 +94,7 @@
     {% endif %}
         {% if sell %}
     <td>
-        <form action="{% url 'sell_armor' item.id %}" method="post">
+        <form action="{% url 'arenafighter:sell_armor' item.id %}" method="post">
         {% csrf_token %}
         <input type="hidden" value="{{item.id}}" name="item_id"/>
         <input type="hidden" value="purchase" name="purchase"/>
