--- a/templates/store.html
+++ b/templates/store.html
@@ -2,7 +2,7 @@
 {% block content %}
 Well, hello there, stranger! Welcome to the shop.
 <br/><br/><br/>
-If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
+If yer in the mood to make some coin, you can always <a href="{% url 'arenafighter:sell_detail' %}">SELL</a> some items from your inventory.
 <br/>
 <br/>
 <table>
@@ -13,9 +13,9 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
     {% for potion in potions %}
     <tr>
-        <td><a href="{% url 'store_potion_detail' potion.id %}">{{ potion }}</a></td>
+        <td><a href="{% url 'arenafighter:store_potion_detail' potion.id %}">{{ potion }}</a></td>
         <td><center>{{potion.buy_value}}</center></td>
-        <td><form action="{% url 'purchase_potion' potion.id %}" method="post">
+        <td><form action="{% url 'arenafighter:purchase_potion' potion.id %}" method="post">
             {% csrf_token %}
             <input type="hidden" value="{{item.id}}" name="item_id"/>
             <input type="hidden" value="purchase" name="purchase"/>
@@ -34,9 +34,9 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
 {% for weapon in weapons %}
     <tr>
-        <td><a href="{% url 'store_weapon_detail' weapon.id %}">{{ weapon }}</a></td>
+        <td><a href="{% url 'arenafighter:store_weapon_detail' weapon.id %}">{{ weapon }}</a></td>
         <td><center>{{ weapon.buy_value }}</center></td>
-        <td><form action="{% url 'purchase_weapon' weapon.id %}" method="post">
+        <td><form action="{% url 'arenafighter:purchase_weapon' weapon.id %}" method="post">
             {% csrf_token %}
             <input type="hidden" value="{{ weapon.id }}" name="item_id"/>
             <input type="hidden" value="purchase" name="purchase"/>
@@ -56,9 +56,9 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
 {% for armor in armors %}
     <tr>
-        <td><a href="{% url 'store_armor_detail' armor.id %}">{{ armor }}</a><br/></td>
+        <td><a href="{% url 'arenafighter:store_armor_detail' armor.id %}">{{ armor }}</a><br/></td>
         <td><center>{{ armor.buy_value }}</center></td>
-        <td><form action="{% url 'purchase_armor' armor.id %}" method="post">
+        <td><form action="{% url 'arenafighter:purchase_armor' armor.id %}" method="post">
             {% csrf_token %}
             <input type="hidden" value="{{ armor.id }}" name="item_id"/>
             <input type="hidden" value="purchase" name="purchase"/>
