Add grophy and joshy views

--- a/templates/sitehome.html
+++ b/templates/sitehome.html
@@ -10,6 +10,12 @@
 
 <br/>
 <a href="{% url 'arenafighter:home' %}">ArenaFighter</a>
+<br/>
+<a href="{% url 'grophy:home' %}">Design</a>
+
+<br/>
+<a href="{% url 'joshy:home' %}">Software</a>
+
 
 
 
