--- a/templates/item.html
+++ b/templates/item.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
         <td>ITEM TYPE</td>
-        <td>{{ item.type }}</td>
+        <td>{{ item.item_type }}</td>
     </tr>
     <tr>
         <td>PURCHASE VALUE</td>
@@ -59,9 +59,9 @@
 
 {% if not purchase_form and item.type != "potion" %}
 
-    {% if item.type == "armor" %}
+    {% if item.item_type == "armor" %}
     <form action="{% url 'arenafighter:equip_armor' item.id %}" method="post">
-    {% elif item.type  == "weapon" %}
+    {% elif item.item_type  == "weapon" %}
     <form action="{% url 'arenafighter:equip_weapon' item.id %}" method="post">
     {% endif %}
         {% csrf_token %}
