--- a/templates/grophyhome.html
+++ b/templates/grophyhome.html
@@ -40,6 +40,22 @@ hi grohpy!
 Twitter | linkedin | vimeo | instagram | pinterest | tumblr | flickr
 
 
+
+
+<div id='grophy-side-nav'>
+	<p>illustration</p>
+	<p>logo design</p>
+	<p>character design</p>
+	<p>user experience</p>
+	<p>painting</p>
+	<p>drawing</p>
+	<p>2d</p>
+	<p>3d</p>
+	<p>short film</p>
+	<p>photography</p>
+	<p>video compositing</p>
+</div>
+
 </body>
 
 </html>
