--- a/global-static/grophy/grophymain.css
+++ b/global-static/grophy/grophymain.css
@@ -24,3 +24,10 @@ body {
 	border-left: 50px;
 /*	border-style: none solid none solid;*/
 }
+
+.expanded-nav-div-active {
+	background-color: white;
+	width: 100px;
+	height: 100px;
+
+}
