--- a/templates/grophyhome.html
+++ b/templates/grophyhome.html
@@ -1,14 +1,6 @@
-{% load staticfiles %}
+{% extends 'grophybase.html' %}
 
-<html>
-<head>
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- 	<link rel="stylesheet" type="text/css" href="{% static 'grophy/grophymain.css' %}"/>
-
-</head>
-
-
-<body>
+{% block content %}
 <a href="{% url 'sitehome' %}">Home</a>
 
 hi grohpy!
@@ -16,58 +8,16 @@ hi grohpy!
 
 <div id='main-columns'>
 <div class='category-box'>
-<a href="{% url 'grophy:about' %}">About</a>
+<a href="{% url 'grophy:about_grophy' %}">About</a>
 <br/>
 </div>
 <div class='category-box'>
-<a href="{% url 'grophy:portfolio' %}">Portfolio</a>
-<br/>
-</div>
-<div class='category-box'>
-<a href="{% url 'grophy:resume' %}">Resume</a>
-<br/>
-</div>
-<div class='category-box'>
-<a href="{% url 'grophy:blog' %}">Travel Blog</a>
-<br/>
-</div>
-<div class='category-box'>
-<a href="{% url 'grophy:videos' %}">Videos!</a>
+<a href="{% url 'grophy:video_compositing' %}">Videos!</a>
 </div>
 <br/>
 </div>
 
 
-Twitter | linkedin | vimeo | instagram | pinterest | tumblr | flickr
 
 
-
-
-<div id='grophy-side-nav'>
-	<p class='side-nav-item'>illustration</p>
-	<p class='side-nav-item'>logo design</p>
-	<p class='side-nav-item'>character design</p>
-	<p class='side-nav-item'>user experience</p>
-	<p class='side-nav-item'>painting</p>
-	<p class='side-nav-item'>drawing</p>
-	<p class='side-nav-item'>2d</p>
-	<p class='side-nav-item'>3d</p>
-	<p class='side-nav-item'>short film</p>
-	<p class='side-nav-item'>photography</p>
-	<p class='side-nav-item'>video compositing</p>
-</div>
-
-
-<script type='text/javascript'>
-$('.side-nav-item').bind('click', function () {
-	$('.side-nav-item').removeClass('expanded-nav-div-active');
-	$(this).addClass('expanded-nav-div-active');
-
-})
-
-</script>
-
-
-</body>
-
-</html>
+{% endblock %}
