--- a/global-static/grophy/grophymain.css
+++ b/global-static/grophy/grophymain.css
@@ -9,25 +9,31 @@ body {
 }
 
 #main-columns {
-	columns: 30rem auto;
-	width: 90%;
-	border-right: 100px;
+
+	columns: 3;
+	width: 80%;
+	margin-right: 100px;
 }
 
 #grophy-side-nav {
 	position: fixed;
 	bottom: 0;
 	right: 0;
-	top: 0;
-	width: 10%;
+	top: 10%;
+	left: auto;
+	width: 20%;
+	height: 80%;
 	float: right;
-	border-left: 50px;
-/*	border-style: none solid none solid;*/
+	border-left: 30px;
+	margin-left: 5px;
+	border-style: none 0px 0px 0px;
+	border-style: solid;
+	border-color: black;
 }
 
 .expanded-nav-div-active {
 	background-color: white;
-	width: 100px;
+	width: 100%;
 	height: 100px;
 
 }
