--- a/templates/grophy/portfolio-item-list.html
+++ b/templates/grophy/portfolio-item-list.html
@@ -1,1 +1,8 @@
 {% extends 'grophybase.html' %}
+
+{% block content %}
+
+{% for item in portfolio_items %}
+<img src='{{ item.portfolio_item.url }}' height='200px' width='200px'>
+{% endfor %}
+{% endblock %}
