--- a/templates/grophybase.html
+++ b/templates/grophybase.html
@@ -4,6 +4,8 @@
 <head>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  	<link rel="stylesheet" type="text/css" href="{% static 'grophy/grophymain.css' %}"/>
+ 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine|ABeeZee|Amatic+SC|Dosis|PT+Sans|Raleway|Signika|Ubuntu">
+
 
 </head>
 
