--- a/global-static/grophy/grophymain.css
+++ b/global-static/grophy/grophymain.css
@@ -16,6 +16,7 @@ body {
 }
 
 #grophy-side-nav {
+	box-sizing: border-box;
 	position: fixed;
 	bottom: 0;
 	right: 0;
@@ -25,7 +26,8 @@ body {
 	height: 80%;
 	float: right;
 	border-left: 30px;
-	margin-left: 5px;
+	margin-left: 50px;
+	padding-left: 5px;
 	border-style: none 0px 0px 0px;
 	border-style: solid;
 	border-color: black;
@@ -38,6 +40,47 @@ body {
 	cursor: pointer;
 
 }
+
+#portfolio-list {
+	columns: 3;
+	width: 80%;
+	max-width: 80%;
+	column-fill: balance;
+	column-gap: 50px;
+}
+
+.portfolio-list-item {
+	width: 100%;
+	max-width: 100%;
+	height: 80%;
+	max-height: 80%;
+	overflow: hidden;
+}
+
+img.portfolio-item {
+	max-width: 100%;
+	height: 80%;
+	max-height: 80%;
+	overflow: hidden;
+}
+
+.column-left{
+	float: left; 
+	width: 33%;
+	max-width: 33%;
+ }
+.column-right{ 
+	float: right; 
+	width: 33%;
+	max-width: 33%;
+ }
+.column-center{ 
+	display: inline-block; 
+	width: 33%;
+	max-width: 33%;
+ }
+
+
 
 /* unvisited link */
 a:link {
