--- a/templates/grophy/portfolio-item-list.html
+++ b/templates/grophy/portfolio-item-list.html
@@ -5,11 +5,10 @@
 <div id='portfolio-list'>
 {% for item in portfolio_items %}
 
-  {% comment %}
- {% if forloop.counter|divisibleby:3 %}column-right {% elif forloop.counter0|divisibleby:2 %}column-center{% else %}column-left{% endif %}
- {% endcomment %}
-	<div class='porftolio-list-item'>
-		<img src='{{ item.portfolio_item.url }}' class=' portfolio-item'>
+	<div class='portfolio-list-item'> <!---{% if forloop.counter|divisibleby:3 %}column-right{% elif forloop.counter0|divisibleby:2 %}column-center{% else %}column-left{% endif %}'>-->
+		<div class='portfolio-list-item-content'>
+			<img src='{{ item.portfolio_item.url }}'>
+		</div>
 	</div>
 {% endfor %}
 </div>
