--- a/templates/grophybase.html
+++ b/templates/grophybase.html
@@ -3,8 +3,9 @@
 <html>
 <head>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- 	<link rel="stylesheet" type="text/css" href="{% static 'grophy/grophymain.css' %}"/>
+  	<link rel="stylesheet" type="text/css" href="{% static 'grophy/grophymain.css' %}"/>
  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine|ABeeZee|Amatic+SC|Dosis|PT+Sans|Raleway|Signika|Ubuntu">
+<!---	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
 
 </head>
@@ -15,6 +16,14 @@
 {% include 'grophy/side-nav.html' %}
 {% block content %}
 {% endblock %}
+
+<!---
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/
+JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+-->
+
 
 </body>
 </html>
