--- a/templates/grophybase.html
+++ b/templates/grophybase.html
@@ -3,7 +3,10 @@
 <html>
 <head>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  	<link rel="stylesheet" type="text/css" href="{% static 'grophy/bootstrap.css' %}"/>
+  	<link rel="stylesheet" type="text/css" href="{% static 'grophy/bootstrap-theme.css' %}"/>
   	<link rel="stylesheet" type="text/css" href="{% static 'grophy/grophymain.css' %}"/>
+
  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine|ABeeZee|Amatic+SC|Dosis|PT+Sans|Raleway|Signika|Ubuntu">
 <!---	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
